--- a/Client/src/translations/EN/global.json
+++ b/Client/src/translations/EN/global.json
@@ -62,7 +62,8 @@
               "packageName": "Package Name",
               "description": "Description",
               "price": "Price",
-              "actions": "Actions"
+              "actions": "Actions",
+              "save": "save"
             },
             "forms": {
               "followUpAfter1Hour": "After 1 hour",
